Fixed broken css

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -3,11 +3,14 @@
   justify-content: space-between;
   align-items: center;
   padding: 6px 16px; /* Reduced vertical & horizontal padding */
-  height: 50px;
+  height: 60px;
   position: fixed;
+  left: 0;
+  right: 0;
   top: 0;
   width: 100%;
   z-index: 1000;
+  box-sizing: border-box;
 
   border-bottom-left-radius: 25px;
   border-bottom-right-radius: 25px;
